[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-signal-env"
version = "1.0.0"
description = "An AI environment for traffic signal control on OpenEnv."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "thirunagarisairamcharan" }]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai>=2.7.2,<3",
    "httpx==0.27.0",
    "pyyaml==6.0.1",
    "numpy==1.26.4",
    "python-multipart==0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/thirunagarisairamcharan/TrafficSignalEnv"
Repository = "https://github.com/THIRUNAGARISAIRAMCHARAN/TrafficSignalEnv"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
